Changed Grafana volume to mount point

--- a/ansible/playbooks/deployment/docker_grafana.yaml
+++ b/ansible/playbooks/deployment/docker_grafana.yaml
@@ -5,24 +5,28 @@
 
   tasks:
 
-    - name: Ensure the volume is created
-      community.docker.docker_volume:
-        name: grafana_data
-        state: present
-
     - name: Ensure the monitoring network is created
       community.docker.docker_network:
         name: monitoring_network
         state: present
 
+    - name: Create a directory to map Grafana information
+      ansible.builtin.file:
+        path: /opt/grafana
+        state: directory
+        mode: '0700'
+        owner: "{{ lookup('ansible.builtin.env', 'ssh_uid') }}"
+        group: "{{ lookup('ansible.builtin.env', 'ssh_gid') }}"
+      become: true # elevate because is inside opt
+
     - name: Deploy Grafana
       community.docker.docker_container:
         name: grafana
-        image: "grafana/grafana:latest"
+        image: grafana/grafana:latest
         ports:
           - "3001:3000"
         volumes:
-          - grafana_data:/etc/grafana/
+          - /opt/grafana:/etc/grafana/
         networks:
           - name: monitoring_network
         restart_policy: unless-stopped
