--- a/ansible/playbooks/deployment/docker_grafana.yaml
+++ b/ansible/playbooks/deployment/docker_grafana.yaml
@@ -29,5 +29,6 @@
           - /opt/grafana:/etc/grafana/
         networks:
           - name: monitoring_network
+        user: "{{ lookup('ansible.builtin.env', 'ssh_uid') }}:{{ lookup('ansible.builtin.env', 'ssh_gid') }}"
         restart_policy: unless-stopped
         state: started
