--- a/ansible/playbooks/deployment/docker_grafana.yaml
+++ b/ansible/playbooks/deployment/docker_grafana.yaml
@@ -26,7 +26,7 @@
         ports:
           - "3001:3000"
         volumes:
-          - grafana_data:/etc/grafana/
+          - /opt/grafana:/etc/grafana/
         networks:
           - name: monitoring_network
         user: "{{ lookup('ansible.builtin.env', 'ssh_uid') }}:{{ lookup('ansible.builtin.env', 'ssh_gid') }}"
