Changed user for database

--- a/ansible/playbooks/deployment/docker_semaphore.yaml
+++ b/ansible/playbooks/deployment/docker_semaphore.yaml
@@ -59,7 +59,7 @@
           - name: semaphore_network
         volumes:
           - /opt/semaphore/mysql:/var/lib/mysql
-        user: "{{ uid }}:{{ gid }}"
+        user: root # need to be run as root 
         restart_policy: unless-stopped
 
     - name: Deploy Semaphore
