--- a/ansible/playbooks/deployment/docker_sonarqube.yaml
+++ b/ansible/playbooks/deployment/docker_sonarqube.yaml
@@ -40,6 +40,7 @@
           - /opt/sonarqube/postgres:/var/lib/postgresql/data
         networks:
           - name: devops_network
+        user: root
         restart_policy: unless-stopped
         state: started
 
@@ -57,6 +58,7 @@
           - /opt/sonarqube/data:/opt/sonarqube
         networks:
           - name: devops_network
+        user: root
         restart_policy: unless-stopped
         state: started
 
