Added backup tasks

--- a/ansible/playbooks/backup/docker_containers_backup.yaml
+++ b/ansible/playbooks/backup/docker_containers_backup.yaml
@@ -13,6 +13,21 @@
         group: "{{ gid }}"
       become: true
 
+    - name: Checks for Grafana directory
+      ansible.builtin.stat:
+        path: /opt/grafana
+      register: grafana
+
+    - name: Grafana
+      ansible.builtin.copy:
+        src: /opt/grafana # does not end with "/", the directory itself with all contents is copied
+        dest: /mnt/backup_library/{{ name }}/
+        remote_src: yes # the source is on remote host
+        mode: preserve
+        directory_mode: preserve
+        force: true # Influence whether the remote file must always be replaced.
+      when: grafana.stat.isdir is defined and grafana.stat.isdir
+
     - name: Checks for Jenkins directory
       ansible.builtin.stat:
         path: /opt/jenkins
@@ -27,3 +42,18 @@
         directory_mode: preserve
         force: true # Influence whether the remote file must always be replaced.
       when: jenkins.stat.isdir is defined and jenkins.stat.isdir
+
+    - name: Checks for Portainer directory
+      ansible.builtin.stat:
+        path: /opt/portainer
+      register: portainer
+
+    - name: Portainer
+      ansible.builtin.copy:
+        src: /opt/portainer # does not end with "/", the directory itself with all contents is copied
+        dest: /mnt/backup_library/{{ name }}/
+        remote_src: yes # the source is on remote host
+        mode: preserve
+        directory_mode: preserve
+        force: true # Influence whether the remote file must always be replaced.
+      when: portainer.stat.isdir is defined and portainer.stat.isdir
