--- a/docker-compose/ansible-semaphore/compose.yaml
+++ b/docker-compose/ansible-semaphore/compose.yaml
@@ -1,26 +1,25 @@
 ---
-volumes:
-  semaphore-mysql:
-    driver: local
 
 services:
 
-  mysql:
+  semaphore_mysql:
     image: docker.io/library/mysql:latest
-    hostname: mysql
+    hostname: semaphore_mysql
+    container_name: semaphore_mysql
     volumes:
-      - semaphore-mysql:/var/lib/mysql
+      - /opt/semaphore/mysql:/var/lib/mysql
     environment:
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
-      - MYSQL_DATABASE=semaphore
+      - MYSQL_DATABASE=semaphore_db
       - MYSQL_USER=semaphore
       - MYSQL_PASSWORD=secret-password  # change!
+    networks:
+      - semaphore-network
     restart: unless-stopped
 
   semaphore:
-    container_name: ansiblesemaphore
+    container_name: semaphore
     image: docker.io/semaphoreui/semaphore:latest
-    user: "${UID}:${GID}"
     ports:
       - 3000:3000
     environment:
@@ -29,7 +28,7 @@ services:
       - SEMAPHORE_DB_HOST=mysql
       - SEMAPHORE_DB_PORT=3306
       - SEMAPHORE_DB_DIALECT=mysql
-      - SEMAPHORE_DB=semaphore
+      - SEMAPHORE_DB=semaphore_db
       - SEMAPHORE_PLAYBOOK_PATH=/tmp/semaphore/
       - SEMAPHORE_ADMIN_PASSWORD=secret-admin-password  # change!
       - SEMAPHORE_ADMIN_NAME=admin
@@ -37,10 +36,17 @@ services:
       - SEMAPHORE_ADMIN=admin
       - SEMAPHORE_ACCESS_KEY_ENCRYPTION=change-this-key  # add to your access key encryption !
       - ANSIBLE_HOST_KEY_CHECKING=false  # (optional) change to true if you want to enable host key checking
+      - PUID="1000"
+      - PGID="1000"
     volumes:
-      - ./inventory/:/inventory:ro
-      - ./authorized-keys/:/authorized-keys:ro
-      - ./config/:/etc/semaphore:rw
+      - /opt/semaphore/inventory/:/inventory:ro
+      - /opt/semaphore/authorized-keys/:/authorized-keys:ro
+      - /opt/semaphore/config/:/etc/semaphore:rw
+    networks:
+      - semaphore-network
     restart: unless-stopped
     depends_on:
-      - mysql
+      - semaphore_mysql
+
+networks:
+  semaphore-network:
