--- a/docker-compose/ansible-semaphore/compose.yaml
+++ b/docker-compose/ansible-semaphore/compose.yaml
@@ -25,7 +25,7 @@ services:
     environment:
       - SEMAPHORE_DB_USER=semaphore
       - SEMAPHORE_DB_PASS=secret-password  # change!
-      - SEMAPHORE_DB_HOST=mysql
+      - SEMAPHORE_DB_HOST=semaphore_mysql
       - SEMAPHORE_DB_PORT=3306
       - SEMAPHORE_DB_DIALECT=mysql
       - SEMAPHORE_DB=semaphore_db
