--- a/docker-compose/ansible-semaphore/compose.yaml
+++ b/docker-compose/ansible-semaphore/compose.yaml
@@ -14,7 +14,7 @@ services:
       - MYSQL_USER=semaphore
       - MYSQL_PASSWORD=secret-password  # change!
     networks:
-      - semaphore-network
+      - smnetwork
     restart: unless-stopped
 
   semaphore:
@@ -34,15 +34,15 @@ services:
       - SEMAPHORE_ADMIN_NAME=admin
       - SEMAPHORE_ADMIN_EMAIL=admin@localhost
       - SEMAPHORE_ADMIN=admin
-      - SEMAPHORE_ACCESS_KEY_ENCRYPTION=${encryption_key}  # add to your access key encryption !
+      - SEMAPHORE_ACCESS_KEY_ENCRYPTION=${encryption_key}  # generate with command: head -c32 /dev/urandom | base64
       - ANSIBLE_HOST_KEY_CHECKING=false  # (optional) change to true if you want to enable host key checking
       - TZ=America/Sao_Paulo
     networks:
-      - semaphore-network
+      - smnetwork
     user: root
     restart: unless-stopped
     depends_on:
       - semaphore_mysql
 
 networks:
-  semaphore-network:
+  smnetwork:
