--- a/ansible/playbooks/deployment/docker_sonarqube.yaml
+++ b/ansible/playbooks/deployment/docker_sonarqube.yaml
@@ -77,6 +77,7 @@
           - /opt/sonarqube/logs:/opt/sonarqube/logs
         networks:
           - name: devops_network
+        user: "{{ uid }}:{{ gid }}"
         restart_policy: unless-stopped
         state: started
 
