--- a/ansible/playbooks/deployment/docker_sonarqube.yaml
+++ b/ansible/playbooks/deployment/docker_sonarqube.yaml
@@ -52,7 +52,7 @@
         image: postgres:latest
         env:
           POSTGRES_USER: sonar
-          POSTGRES_PASSWORD: sonar
+          POSTGRES_PASSWORD: "{{ lookup('ansible.builtin.env', 'sonarqube_db_password') }}"
           POSTGRES_DB: sonarqube_db
         volumes:
           - /opt/sonarqube/postgres:/var/lib/postgresql/data
@@ -70,7 +70,7 @@
         env:
           SONAR_JDBC_URL: jdbc:postgresql://sonarqube_postgres:5432/sonarqube_db
           SONAR_JDBC_USERNAME: sonar
-          SONAR_JDBC_PASSWORD: sonar
+          SONAR_JDBC_PASSWORD: "{{ lookup('ansible.builtin.env', 'sonarqube_db_password') }}"
         volumes:
           - /opt/sonarqube/data:/opt/sonarqube/data
           - /opt/sonarqube/extensions:/opt/sonarqube/extensions
