--- a/ansible/playbooks/deployment/docker_portainer.yaml
+++ b/ansible/playbooks/deployment/docker_portainer.yaml
@@ -23,8 +23,8 @@
         volumes:
           - /run/docker.sock:/var/run/docker.sock
           - /opt/portainer:/data
-        command:
-            --ssl
-            --sslcert /certs/ivanfabbri.pem
-            --sslkey /certs/ivanfabbri_privkey.pem
+        #command:
+        #    --ssl
+        #    --sslcert /certs/ivanfabbri.pem
+        #    --sslkey /certs/ivanfabbri_privkey.pem
         restart_policy: unless-stopped
