--- a/ansible/playbooks/installation/webmin.yaml
+++ b/ansible/playbooks/installation/webmin.yaml
@@ -21,6 +21,13 @@
         mode: '0700'
       become: true # elevate because is inside opt
 
+    - name: Create a directory to store webmin SSL certificates
+      ansible.builtin.file:
+        path: "/opt/webmin/ssl"
+        state: directory
+        mode: '0700'
+      become: true # elevate because is inside opt
+
     - name: Download automatic setup-repos.sh Webmin script to configure repositories
       ansible.builtin.uri:
         url: https://raw.githubusercontent.com/webmin/webmin/master/setup-repos.sh
@@ -68,3 +75,15 @@
         block: |
           referers={{ name }}.{{ lookup('ansible.builtin.env', 'domain_url') }}
       become: true
+
+    - name: Return motd to registered var
+      ansible.builtin.command: cat {{ lookup('ansible.builtin.env', 'ssl_key') }} {{ lookup('ansible.builtin.env', 'ssl_cert') }} > /opt/webmin/ssl/miniserv.pem
+
+    - name: Copy the file created with the certificates to replace the Webmin self signed certificates
+      ansible.builtin.copy:
+        src: /opt/webmin/ssl/miniserv.pem
+        dest: /etc/webmin/miniserv.pem
+        owner: root
+        group: root
+        mode: '0600'
+        backup: yes
