Added user elevation

--- a/ansible/playbooks/installation/webmin.yaml
+++ b/ansible/playbooks/installation/webmin.yaml
@@ -78,6 +78,7 @@
 
     - name: Return motd to registered var
       ansible.builtin.command: "cat {{ lookup('ansible.builtin.env', 'ssl_key') }} {{ lookup('ansible.builtin.env', 'ssl_cert') }} > /opt/webmin/ssl/miniserv.pem"
+      become: true
 
     - name: Copy the file created with the certificates to replace the Webmin self signed certificates
       ansible.builtin.copy:
