--- a/ansible/playbooks/deployment/docker_grafana.yaml
+++ b/ansible/playbooks/deployment/docker_grafana.yaml
@@ -26,7 +26,7 @@
         ports:
           - "3001:3000"
         volumes:
-          - /opt/grafana:/etc/grafana/
+          - /opt/grafana:/var/lib/grafana
         networks:
           - name: monitoring_network
         #user: root # should be run as root
