Added user to Grafana

--- a/ansible/playbooks/deployment/docker_grafana.yaml
+++ b/ansible/playbooks/deployment/docker_grafana.yaml
@@ -29,6 +29,6 @@
           - /opt/grafana:/var/lib/grafana
         networks:
           - name: monitoring_network
-        #user: root # should be run as root
+        user: "{{ uid }}:{{ gid }}"
         restart_policy: unless-stopped
         state: started
