--- a/ansible/playbooks/installation/webmin.yaml
+++ b/ansible/playbooks/installation/webmin.yaml
@@ -76,9 +76,9 @@
           referers={{ name }}.{{ lookup('ansible.builtin.env', 'domain_url') }}
       become: true
 
-    - name: Return motd to registered var
-      ansible.builtin.command: "cat {{ lookup('ansible.builtin.env', 'ssl_key') }} {{ lookup('ansible.builtin.env', 'ssl_cert') }} > /opt/webmin/ssl/miniserv.pem"
-      become: true
+    #- name: Create the pem file with the certificates
+    #  ansible.builtin.command: "cat {{ lookup('ansible.builtin.env', 'ssl_key') }} {{ lookup('ansible.builtin.env', 'ssl_cert') }} > /opt/webmin/ssl/miniserv.pem"
+    #  become: true
 
     - name: Copy the file created with the certificates to replace the Webmin self signed certificates
       ansible.builtin.copy:
