--- a/ansible/playbooks/deployment/docker_jenkins_agent.yaml
+++ b/ansible/playbooks/deployment/docker_jenkins_agent.yaml
@@ -31,6 +31,6 @@
           JENKINS_AGENT_SSH_PUBKEY: "{{ lookup('ansible.builtin.env', 'jenkins_controller_ssh_key') }}"
         networks:
           - name: devops_network
-        #user: root
+        user: "{{ uid }}:{{ gid }}"
         restart_policy: unless-stopped
         state: started
