--- a/ansible/playbooks/installation/apache_maven.yaml
+++ b/ansible/playbooks/installation/apache_maven.yaml
@@ -10,5 +10,5 @@
       ansible.builtin.yum:
         name:
           - maven
-        state: latest
+        state: absent
         update_cache: true
