--- a/ansible/playbooks/deployment/docker_jenkins_agent.yaml
+++ b/ansible/playbooks/deployment/docker_jenkins_agent.yaml
@@ -27,6 +27,7 @@
           - "4422:22"
         volumes:
           - /opt/jenkins/agent:/home/jenkins/agent
+          - /var/run/docker.sock:/var/run/docker.sock
         env:
           JENKINS_AGENT_SSH_PUBKEY: "{{ lookup('ansible.builtin.env', 'jenkins_controller_ssh_key') }}"
         networks:
