Playbook to install Java JDK

--- a/ansible/playbooks/installation/jdk.yaml
+++ b/ansible/playbooks/installation/jdk.yaml
@@ -1,7 +1,7 @@
 
-- name: Install Apache Maven
+- name: Install Java latest JDK release
   gather_facts: false
-  hosts: nodes
+  hosts: controller
   become: true
 
   tasks:
@@ -9,6 +9,6 @@
     - name: Install package
       ansible.builtin.yum:
         name:
-          - maven
+          - java-latest-openjdk-devel
         state: latest
         update_cache: true
