--- a/ansible/playbooks/deployment/docker_jenkins_agent.yaml
+++ b/ansible/playbooks/deployment/docker_jenkins_agent.yaml
@@ -33,6 +33,6 @@
           JENKINS_AGENT_SSH_PUBKEY: "{{ lookup('ansible.builtin.env', 'jenkins_controller_ssh_key') }}"
         networks:
           - name: devops_network
-        #user: "{{ uid }}:{{ gid }}"
+        user: root
         restart_policy: unless-stopped
         state: started
